--- a/WhisperMessenger/resources/Styles.css
+++ b/WhisperMessenger/resources/Styles.css
@@ -1,3 +1,7 @@
+.LoginPane {
+    -fx-background-color: #23272a;
+}
+
 #title {
     -fx-font-size: 32px;
     -fx-font-family: "Arial Black";
@@ -6,10 +10,9 @@
 }
 
 .label {
-    -fx-font-size: 16px;
+    -fx-text-fill: #99aab5;
     -fx-font-family: "Arial Black";
-    -fx-text-color: #99aab5;
-    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
+    -fx-font-size: 16px;
 }
 
 .text-field {
